--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,8 @@
   }
   .floatright {
     background-color: white;
-      width: 50%;
+    width: 50%;
+    position: relative;
   }
   .loginimg{
 
@@ -275,6 +276,11 @@ a {
   margin-top: 15px;
   margin-bottom: 15px;
   width: 100%;
+}
+.loginform{
+  position: absolute;
+  top: 15vw;
+  left: 11vw;
 }
 
 
