designing through bootstrap

--- a/src/components/events.css
+++ b/src/components/events.css
@@ -249,5 +249,10 @@
     margin: 10px;
     padding: 10px;
   }
-  
+  .cardcontainer{
+    background-color: white !important;
+  }
+  .cardtext{
+    color:#184c65 !important;
+  }
   
