--- a/src/components/events.css
+++ b/src/components/events.css
@@ -255,4 +255,10 @@
   .cardtext{
     color:#184c65 !important;
   }
-  
+  .nav-item>a:hover, .nav-item>a:focus{
+    color:#ffffff;
+    background-color: #184c65 !important;
+  }
+  .pillsnavs{
+    width: fit-content;
+  }  
